<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- General -->
    <string name="app_name">					MultiWork</string>
    <string name="GeneralTitle">				General</string>
    <string name="ScreenSummary">				Mantener la pantalla encendida en las mediciones</string>
    <string name="ScreenTitle">					Mantener pantalla encendida</string>
    <string name="Yes">							Si</string>
    <string name="No">							No</string>
    <string name="Ok">							OK</string>
    <string name="Cancel">						Cancelar</string>
    <string name="PleaseWait">					Por favor, espere</string>
    
    <string name="BTRequestTitle">				Petición del sistema</string>
    <string name="BTRequestSummary">			¿Desea encender el Bluetooth?</string>
    <string name="BTOfflineTitle">				Modo sin conexion</string>
    <string name="BTOfflineSummary">			¿Desea usar el modo sin conexion? Si activa el mismo
        										 no se conectara al dispositivo Bluetooth.</string>  
    <string name="BTConnecting">				Conectando…</string>		
    
    <string name="Reinicio">					Reiniciado</string>	 
    										 
    <!--  DeviceListActivity -->
    <string name="scanning">					Escaneando por dispositivos…</string>
    <string name="select_device">				Seleccione un dispositivo</string>
    <string name="none_paired">					No hay dispositivos emparejados</string>
    <string name="none_found">					No se encontraron dispositivos</string>
    <string name="title_paired_devices">		Dispositivos emparejados</string>
    <string name="title_other_devices">			Otros dispositivos disponibles</string>
    <string name="button_scan">					Escanear</string>
    
    <!-- LC Meter -->
    <string name="LCMeterMenu">					Medidor LC</string>
    <string name="FrecMenu">					Frecuencimetro</string>
    <string name="LogicAnalyzerMenu">			Analizador logico</string>
    <string name="BrazoMenu">					Brazo Robot</string>
    
    <!-- Frecuencimetro -->
    <string name="FrecPeriodo">					Periodo:</string>
    
    <!-- Analizador Logico -->
    <string name="AnalyzerPrefsActionTitle">	Configuración</string>
    <string name="AnalyzerHeaderSummary">		Canal de entrada</string>
    <string name="AnalyzerName">				Analizador Logico</string>
    <string name="AnalyzerChannel">				Canal</string>
    <string name="AnalyzerData">				Datos</string>
    <string name="AnalyzerYTitle">				Canales</string>
    <string name="AnalyzerXTitle">				Tiempo</string>
    <string name="AnalyzerConnectError">		Error en la conexion</string>
    <string name="AnalyzerConnectionTimeOut">		Error en la comunicación. Timeout.</string>
    
    <string name="AnalyzerImagen">				Imagen</string>
    <string name="AnalyzerSesion">				Sesion</string>
    <string name="AnalyzerDialogSaveTitle">		Guardar</string>
    <string name="AnalyzerDialogFileName">		Nombre de archivo</string>
    <string name="AnalyzerDialogFileSaved">		Archivo guardado</string>
    <string name="AnalyzerDialogFileNotSaved">	Error al guardar el archivo</string>
    <string name="AnalyzerDialogSampleAlert">	La configuracion actual de baudios y velocidad de muestreo no permitirá un muestreo adecuado.
        										 Aumente la velocidad de muestreo o disminuya los Baudios para un correcto muestreo.</string>
    <string name="AnalyzerDialogSampleAlert2">	La configuracion actual de baudios, velocidad de muestreo y tamaño del buffer llenará el buffer
        										 antes de poder muestrar la mínima cantidad de bits necesarios para una trama de UART.
        										 Disminuya la velocidad de muestreo.</string>
    <string name="AnalyzerDialogClockAlert">	El canal actual está siendo usado como fuente clock por otro canal. ¿Desea cambiar
        										 el protocolo aún así? En ese caso el canal afectado se anulará.</string>    	
    									 
    <string name="AnalyzerDialogSampleTitle">	Advertencia</string>
    <string name="AnalyzerDialogLoading">		Procesando…</string>
    <string name="AnalyzerDialogReceiving">		Recibiendo datos…</string>
    
    <string name="AnalyzerProtocolCategory">	Configuracion canal</string>
    <string name="AnalyzerProtocolSummary">		Protocolo</string>
    <string name="AnalyzerProtocolTitle">		Protocolo canal</string>
    <string name="AnalyzerCLKSummary">			Linea de clock</string>
    <string name="AnalyzerCLKTitle">			Clock</string>
    <string name="AnalyzerBaudSummary">			Baudios UART</string>
    <string name="AnalyzerBaudTitle">			Baudios</string>
    
    <string name="AnalyzerSampleTitle">			Muestreo</string>
    <string name="AnalyzerSampleRateTitle">		Velocidad de muestreo</string>
    <string name="AnalyzerSampleRateSummary">	Velocidad de muestreo del analizador</string>
    <string name="AnalyzerSampleMaxTitle">		Maxima retencion de muestras</string>
    <string name="AnalyzerSampleMaxSummary">	Maxima cantidad de muestras a almacenar (Entre mayor sea mas RAM se utilizara)</string>
    
    <string name="AnalyzerSimpleTriggerTitle">  	Trigger simple</string>
    <string name="AnalyzerSimpleTriggerSummary">  	Usar trigger por cambio de estado para iniciar el muestreo</string>
    <string name="AnalyzerSimpleTriggerChannelSummary">	Habilita este canal para ser utilizado como fuente de trigger simple</string>
    
    <string name="AnalyzerDirectoryTitle">			Directorios</string>
    <string name="AnalyzerDirectoryImageTitle">		Directorio para imágenes</string>
    <string name="AnalyzerDirectoryImageSummary">	Directorio donde guardar las imágenes</string>
    <string name="AnalyzerDirectorySesionTitle">	Directorio para sesiones</string>
    <string name="AnalyzerDirectorySesionSummary">	Directorio donde guardar las sesiones</string>
    
    <string name="AnalyzerActionRawData">			Datos directos</string>
    <string name="AnalyzerActionZoomOut">			Menos zoom</string>
    <string name="AnalyzerActionZoomIn">			Mas zoom</string>
    <string name="AnalyzerActionConfig">			Opciones</string>
    <string name="AnalyzerActionPlay">				Play</string>
    
    <string name="AnalyzerDependencies">			Conflictos correjidos</string>
    
    <!-- Brazo Robot -->
    <string name="NoBTAlertTitle">					No existe Bluetooth</string>
	<string name="NoBTAlertText">					El dispositivo no dispone de Bluetooth por lo tanto no puede hacer
	    											 uso de la aplicación, lo siento</string>
	    											 
	<!-- ACRA -->
	<string name="Error">							Error inesperado en la aplicación…</string>
	<string name="crash_notif_ticker_text">			Error inesperado, por favor envíe un informe…</string>
	<string name="crash_notif_title">				MultiWork se ha detenido inesperadamente.</string>
	<string name="crash_notif_text">				Por favor haga click aquí para ayudarnos a solucionar el problema enviando un reporte.</string>
	<string name="crash_dialog_text">				Un error inesperado ha forzado a la aplicación a detenerse. Por favor ayúdenos a solucionar esto enviando
	    												un informe de errores.</string>
	<string name="crash_dialog_title">				MultiWork - Envío de reporte</string>
    
</resources>